# DroneEmmi-Tello

./: README.md  tello.hpp
example/: CMakeLists.txt
example/src/: DroneEmmi.cpp  DroneEmmi.h  main.cpp
